# StandardTemplates

./: .gitignore  .travis.yml  Algorithms.h  Array.h  BinaryMinHeap.h  BinarySearchTree.h  BinomialHeap.h  BinomialHeapLite.h  BinomialMinHeap.h  BinomialTree.h  CMakeLists.txt  CondQueue.h  Exceptions.h  GetSTL.sh  Interval.h  IteratorsDefinitions.h  List.h  PriorityQueue.h  Queue.h  README.md  STL.h  Stack.h  Templates.h  Vector.h  doxygen.cfg  main.cpp  precompile.sh  processed.cpp
Tests/: AlgorithmsTests.h  ArrayTests.h  BinaryHeapTests.h  BinarySearchTreeTests.h  BinomialHeapLiteTests.h  BinomialHeapTests.h  BinomialTreeTests.h  CondQueueTests.h  IntervalTests.h  ListTests.h  PriorityQueueTests.h  QueueTests.h  StackTests.h  VectorTests.h  test.sh
src/: Algorithms.h  Array.h  Basis.h  BinaryHeap.h  BinarySearchTree.h  BinomialHeap.h  BinomialHeapLite.h  BinomialTree.h  CondQueue.h  Exceptions.h  IteratorsDefinitions.h  List.h  Meta.h  NewArray.h  NewVector.h  PriorityQueue.h  Queue.h  SharedPointer.h  SmartPointers.h  Stack.h  UniquePointer.h  Vector.h
src/_not_used/: ArrayIterator.h
test/: AlgorithmsTests.cpp  AlgorithmsTests.h  ArrayTests.cpp  ArrayTests.h  BinaryHeapTests.cpp  BinaryHeapTests.h  BinarySearchTreeTests.cpp  BinarySearchTreeTests.h  BinomialHeapLiteTests.cpp  BinomialHeapLiteTests.h  BinomialHeapTests.cpp  BinomialHeapTests.h  BinomialTreeTests.cpp  BinomialTreeTests.h  CondQueueTests.cpp  CondQueueTests.h  CreationTests.h  IntervalTests.cpp  IntervalTests.h  ListTests.cpp  ListTests.h  MallocFreeTests.cpp  PriorityQueueTests.cpp  PriorityQueueTests.h  QueueTests.cpp  QueueTests.h  SharedPointerTests.cpp  StackTests.cpp  StackTests.h  SwapTests.cpp  TravisTests.cpp  UniquePointerTests.cpp  VectorTests.cpp  VectorTests.h
test/Array/: ArrayAccessTests.cpp  ArrayAssignmentTests.cpp  ArrayCreationTests.cpp  ArrayCustomResizeTests.cpp  ArrayDeleteTests.cpp  ArrayGeneralSpliceIntsTests.cpp  ArrayGeneralSpliceMoveIntsTests.cpp  ArrayGeneralSpliceSafeIntsTests.cpp  ArrayInsertMoveTests.cpp  ArrayInsertSafeTests.cpp  ArrayIntResizeSafeTests.cpp  ArrayIntResizeTests.cpp  ArrayIteratorTests.cpp  ArrayPushMoveTests.cpp  ArrayPushTests.cpp  ArrayResizeTests.cpp  ArraySwapTests.cpp  _IteratorInsertTests.cpp  _IteratorsDeleteTests.cpp  _IteratorsTests.cpp
test/ArrayTests/: ArrayAssignmentTests.cpp  ArrayCreationTests.cpp  ArrayDeleteSafeTests.cpp  ArrayGeneralSpliceIntsTests.cpp  ArrayGeneralSplitCustomTests.cpp  ArrayGeneralSplitIntsTests.cpp  ArrayInsertTests.cpp  ArrayPushTests.cpp  ArraySwapTests.cpp  ArrayToArrayTests.cpp  CreationTests.cpp  DeleteTests.cpp  IteratorInsertTests.cpp  IteratorsDeleteTests.cpp  IteratorsTests.cpp  PushTests.cpp  ShiftingTests.cpp  ToArrayTests.cpp
test/List/: ListCreationTests.cpp
test/Meta/: AddConstTests.cpp  AndTests.cpp  AreSameTests.cpp  AsConstRefTests.cpp  AsRRefTests.cpp  AsRefTests.cpp  DeclvalTests.cpp  EnableIfTests.cpp  IsAssignableCopyNoexceptTests.cpp  IsAssignableCopyTests.cpp  IsAssignableMoveNoexceptTests.cpp  IsAssignableMoveTests.cpp  IsAssignableNoexceptTests.cpp  IsAssignableTests.cpp  IsConstructibleCopyable.cpp  IsConstructibleCopyableNoexceptTests.cpp  IsConstructibleDefault.cpp  IsConstructibleDefaultNoexceptTests.cpp  IsConstructibleMovable.cpp  IsConstructibleMovableNoexceptTests.cpp  IsLValueReferenceTests.cpp  IsRValueReferenceTests.cpp  IsReferenceTests.cpp  OrTests.cpp  RemoveReferenceTests.cpp  TrueFalseTests.cpp
test/Pointers/: SharedPointerTests.cpp  UniquePointerTests.cpp
test/Vector/: VectorAccessTests.cpp  VectorAssignmentTests.cpp  VectorConstCreationTests.cpp  VectorCreationTests.cpp  VectorDeleteTests.cpp  VectorInsertTests.cpp  VectorIteratorDeleteTests.cpp  VectorIteratorInsertTests.cpp  VectorIteratorTests.cpp  VectorPushTests.cpp  VectorTests.cpp  VectorToArrayTests.cpp
